# unblock-youtube-discord

./: .clang-format  .gitignore  CMakeFunctions.cmake  CMakeLists.txt  CMakePresets.json  LICENSE.txt  README.md  RUN.cmd  RUN_ALT.cmd  STOP.cmd  russia-blacklist.txt  setup_update.bat
.github/workflows/: cmake-build.yml  cmake_build_clang.yml  cmake_build_clang_debug.yml
binaries/Tor/: torrc
configs/: RUN_1.cmd  RUN_2.cmd  RUN_3.cmd  RUN_4.cmd  RUN_5.cmd  RUN_ALT_1.cmd  RUN_ALT_2.cmd  RUN_ALT_3.cmd  RUN_ALT_4.cmd  RUN_RESET.cmd  blacklist.list  domain_test_all.list  domain_test_base.list  domain_test_discord.list  domain_test_x.com.list  domain_test_youtube.list  domain_video.list  domains_exclude.list  fake_bin.config  feke_bin.config  hosts  ip-blacklist.list  lua_init.config  russia-blacklist.txt  service.config  service_setting.config  strategy_0.config  strategy_1.config  strategy_10.config  strategy_11.config  strategy_12.config  strategy_14.config  strategy_16.config  strategy_18.config  strategy_2.config  strategy_3.config  strategy_4.config  strategy_5.config  strategy_6.config  strategy_7.config  (+3 more)
configs/blacklist/: all.list  discord.list  instagram.list  messengers.list  rutor.list  tld.list  torproject.list  x.com.list  youtube.list
configs/dns_host/: claude.list  deepl.list  google_ai.list  instagram.list  microsoft_copilot.list  proton.list  torproject.list  weather_com.list
configs/dns_hosts/: claude.list  cloudflare.list  deepl.list  deezer.list  discord.list  eleven_labs.list  facebook.list  fitbit.list  google_ai.list  grok.list  instagram.list  jet_brains.list  linear_app.list  messengers.list  microsoft_copilot.list  open_aI.list  rutor.list  spotify.list  supercell.list  torproject.list  torrent_tracers.list  trae_ai.list  twitch.list  weather_com.list  windsurf.list  x.com.list  xbox.list  youtube.list
configs/domain_test/: all.list  amazon.list  base_discord.list  base_youtube.list  discord.list  domain_video.list  facebook.list  instagram.list  messengers.list  roblox.list  rutor.list  speedtest.list  torrent_tracers.list
configs/ip-set/: messengers.list
configs/proxy_strategy/: strategy_0.config  strategy_1.config  strategy_2.config  strategy_3.config  strategy_4.config  strategy_5.config
configs/strategy/: strategy_0.config  strategy_1.config  strategy_10.config  strategy_11.config  strategy_12.config  strategy_13.config  strategy_14.config  strategy_15.config  strategy_16.config  strategy_17.config  strategy_18.config  strategy_19.config  strategy_2.config  strategy_20.config  strategy_21.config  strategy_22.config  strategy_23.config  strategy_3.config  strategy_4.config  strategy_5.config  strategy_6.config  strategy_7.config  strategy_8.config  strategy_9.config  strategy_alt_0.config  strategy_alt_1.config  strategy_alt_2.config
configs/strategy/1.4.10/: strategy_0.config  strategy_1.config  strategy_10.config  strategy_11.config  strategy_12.config  strategy_13.config  strategy_14.config  strategy_15.config  strategy_16.config  strategy_17.config  strategy_18.config  strategy_19.config  strategy_2.config  strategy_3.config  strategy_4.config  strategy_5.config  strategy_6.config  strategy_7.config  strategy_8.config  strategy_9.config
configs/strategy/1.4.16/: strategy_0.config  strategy_1.config  strategy_10.config  strategy_11.config  strategy_12.config  strategy_13.config  strategy_14.config  strategy_15.config  strategy_16.config  strategy_17.config  strategy_18.config  strategy_19.config  strategy_2.config  strategy_3.config  strategy_4.config  strategy_5.config  strategy_6.config  strategy_7.config  strategy_8.config  strategy_9.config
configs/strategy/1.4.6/: strategy_0.config  strategy_1.config  strategy_10.config  strategy_11.config  strategy_12.config  strategy_13.config  strategy_14.config  strategy_15.config  strategy_16.config  strategy_17.config  strategy_18.config  strategy_19.config  strategy_2.config  strategy_3.config  strategy_4.config  strategy_5.config  strategy_6.config  strategy_7.config  strategy_8.config  strategy_9.config
configs/strategy/1.4.8/: strategy_0.config  strategy_1.config  strategy_10.config  strategy_11.config  strategy_12.config  strategy_13.config  strategy_14.config  strategy_15.config  strategy_16.config  strategy_17.config  strategy_18.config  strategy_2.config  strategy_3.config  strategy_4.config  strategy_5.config  (+4 more)
src/core/: CMakeLists.txt  core.cpp  core.h  debug.cpp  debug.h  dll_exports.inl  file_system.cpp  file_system.h  input_console.cpp  input_console.h  localization.cpp  localization.h  lock_thread.cpp  lock_thread.hpp  macro.inl  pch.h  ptr.h  service.cpp  service.h  timer.cpp  timer.h  types.inl  utils.cpp  utils.h  virtual_key_codes.hpp
src/engine/: CMakeLists.txt  engine.cpp  engine.h  engine.rc  engine_api.hpp  main.cpp  version.h  version.hpp
src/ui/: CMakeLists.txt  pch.h  ui.cpp  ui.h  ui_api.hpp  ui_base.cpp  ui_base.h  ui_base_element.cpp  ui_base_element.h  ui_button.cpp  ui_button.h  ui_check_box.cpp  ui_check_box.h  ui_elements.hpp  ui_input.cpp  ui_input.h  ui_list_ul.cpp  ui_list_ul.h  ui_remove_app.cpp  ui_secondary_window.cpp  ui_secondary_window.h  ui_select_list.cpp  ui_select_list.h  ui_setting.cpp  ui_show_info_setting.cpp  ui_start_service.cpp  ui_stop_service.cpp  ui_testing.cpp  ui_update_app.cpp  utils_ultralight.hpp
src/unblock/: CMakeLists.txt  dns_google.cpp  dns_host.cpp  dns_host.h  domain_testing.cpp  domain_testing.h  http_load_content.cpp  http_load_content.h  pch.h  proxy_strategies_dpi.cpp  proxy_strategies_dpi.h  strategies_dpi.cpp  strategies_dpi.h  strategies_dpi_base.cpp  strategies_dpi_base.h  strategy_generator.cpp  strategy_generator.h  unblock.cpp  unblock.h  unblock_api.hpp
ui/: main.html
ui/css/: anim_loader.css  base.css  block.css  button.css  input_elements.css  list_ul.css  nav.css  secondary_window.css  style.css
ui/scripts/: botton.js  check_box.js  description_window.js  input.js  lang_text.js  list_select.js  list_ul.js  menu.js  script.js  secondary_window.js  window_controls.js
ui/text/: RU.list  US.list
(+14 files in other folders)
